# DeepLearningTheory

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: test_distribution.yaml  test_pip.yaml
Experiments/Cumulants/: README.md  cumulants.ipynb  report.md
Experiments/DIS_only_ntk/: dis.ipynb  dis_ntk.ipynb
Experiments/DIS_only_ntk/deprecated/: dis_ntk.ipynb
Experiments/Exact_solution/: ntk_analysis.ipynb
Experiments/Integrated_solution/: animation.py
Experiments/Integrated_solution/nnpdf/: GaussianReplicas.ipynb  GeneratefPoints.ipynb  dis_fit.yml  (+16 more)
Experiments/Prior_distribution/: NNPDF_prior.ipynb  README.md  prior.ipynb
Results/: template.yaml
core/: README.md  empirical_stat.py  model_generation.py
dlt/: distribution.py  gen_dicts.py  layers.py  log.py  model.py
doc/: Makefile  NNInit.tex  commands.tex  conclusions.tex  cutoff.tex  dataset.tex  first_results.tex  fk_nullspace.tex  init.tex  initialisation.tex  intro.tex  introduction.tex  lazy_training.tex  nntraining.fdb_latexmk  nntraining.fls  nntraining.ilg  nntraining.tex  ntk.bib  ntk.fdb_latexmk  ntk.fls  ntk.ilg  ntk.tex  ntk.tex.bak  ntk_arch_dep.tex  ntk_pheno.tex  ntk_training.tex  tandc.tex  training.tex  training_and_closure.tex  zero_mode.tex
doc/deprecated/: better.tex  ntk.tex  training_and_closure.tex  zero_mode.tex
doc/scripts/: compare_arch.py  comparisons.py  delta_ntk_plots.py  eigvals_single_plot.py  kernel_recursion.py  ntk_alignment.py  ntk_eigvals_plots.py  ntk_initialisation.py  pdf_plots.py  run_scripts.sh  u_v_fluctuations.py
doc/tabs/: grid.tex
notebooks/: Q_eigvecs.ipynb  amedeo.ipynb  figs_for_paper.ipynb  full_evolution.ipynb  kernel_recursion.ipynb  loss_variation.ipynb  ntk_analysis.ipynb  plot_examples.ipynb  prior.ipynb  recursion.ipynb  template.ipynb  tolerance_study.ipynb  toymodel.ipynb
scripts/: train_network_T3.py
yadlt/: __init__.py  callback.py  context.py  distribution.py  evolution.py  layers.py  load_data.py  loader.py  model.py  plot_utils.py  plotting.py  utils.py
yadlt/plotting/: plot_alignment.py  plot_covariance.py  plot_delta_ntk.py  plot_distance.py  plot_eigvals.py  plot_eigvals_single_plot.py  plot_evolution_pdf.py  plot_expval_u_f0.py  plot_gibbs_vs_f0.py  plot_kernel_recursion.py  plot_u_v_contribution.py  plotting.py
yadlt/tests/: test_distribution.py
(+530 files in other folders)
