[build-system]
requires = ["poetry-core"]#, "poetry-dynamic-versioning>=1.1.0"]
build-backend = "poetry.core.masonry.api" #"poetry_dynamic_versioning.backend"

[tool.poetry]
name = "yadlt"
version = "0.0.0"
description = "Deep Learning Theory (DLT) library for deep learning theory research"
authors = ["Amedeo Chiefa <amedeochiefa@gmail.com>"]
readme = "README.md"
repository = "https://github.com/achiefa/DeepLearningTheory"
license = "MIT"
packages = [{include = "yadlt"}]
include = ["yadlt/data/BCDMS_data/*.npy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.22.0"
pandas = "^1.4.0"
matplotlib = "^3.5.0"  # Assuming you need this for plot_utils
scipy = "^1.8.0"       # Common dependency for scientific computing
tensorflow = "^2.8.0"  # Assuming this is used for neural network implementation
h5py = "^3.6.0"        # For model saving/loading
pyyaml = "^6.0"        # Common for configuration
jupyter = "^1.0.0"
blessings = "^1.7"        # For terminal color support

# Optional dependencies for development and testing
mypy = {version = "^1.0.0", optional = true}
black = {version = "^22.3.0", optional = true}
flake8 = {version = "^4.0.0", optional = true}
isort = {version = "^5.10.0", optional = true}
ipdb = {version = "^0.13.9", optional = true}
pytest = {version = "^7.0.0", optional = true}
pytest-cov = {version = "^3.0.0", optional = true}
pytest-benchmark = {version = "^3.4.0", optional = true}

# Optional dependencies
[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]
format = ["black", "flake8", "isort"]
test = ["ipdb", "pytest", "pytest-cov", "pytest-benchmark"]

# Import sorting
[tool.isort]
atomic = true
line_length = 100
profile = "black" # https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#custom-configuration
skip_gitignore = true
known_first_party = ["yadlt"]
force_sort_within_sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.poetry.scripts]
train = "scripts.train_network_T3:main"
